More CSS fixes for IE6: * Make the hover icons on themes work. * Make it so the mood theme widget doesn't overlap the nav bar.
git-svn-id: http://code.livejournal.org/svn/livejournal/branches/customize@12397 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/widgets/moodthemechooser.css
+++ b/htdocs/stc/widgets/moodthemechooser.css
@@ -1,3 +1,17 @@
+.appwidget-moodthemechooser fieldset {
+    width: 100%;
+    float: right;
+}
+.appwidget-moodthemechooser[class] fieldset {
+    width: auto;
+    float: none;
+}
+.appwidget-moodthemechooser .detail {
+    float: left;
+}
+.appwidget-moodthemechooser .detail[class] {
+    float: none;
+}
 .moodtheme-links {
     margin-top: 10px !important;
 }
